[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]

[node name="Game" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 68.0187, 274.796 )
_sections_unfolded = [ "Transform" ]

[node name="Player2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 927.775, 265.273 )
_sections_unfolded = [ "Transform" ]

[node name="TimerP1" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="TimerP2" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false


